# viewtogether

./: .gitignore  Makefile  README.md  ghcjs-jquery.gitlocation  ghcjs-react.gitlocation
backend/: Application.hs  Foundation.hs  Import.hs  backend.cabal  devel.hs  stack.yaml  viewtogether.db  vtserver.cabal
backend-servant/: README.md  backend-servant.cabal  devel.hs  viewtogether.db
backend-servant/app/: Main.hs
backend-servant/src/: BaseImports.hs  Claims.hs  Config.hs  DbModels.hs  EntryPoint.hs  Handlers.hs  Imports.hs  Lib.hs  Models.hs  User.hs  ViewTogetherApp.hs
backend/Handler/: Comment.hs  Group.hs  Home.hs  Session.hs
backend/Import/: NoFoundation.hs
backend/config/: models  routes  settings.yml
backend/src/: BaseImports.hs  Claims.hs  Config.hs  DbModels.hs  Handlers.hs  Imports.hs  Models.hs  Session.hs  SwaggerHelp.hs  User.hs  ViewTogetherApp.hs
backend/static/: jsexe
backend/templates/: homepage.hamlet
backend/test/Handler/: GroupSpec.hs  SessionSpec.hs
frontend/: .ghci  frontend.cabal  index.html  package.json  server.js  stack.yaml
frontend/app/: Main.hs
frontend/src/: ExternalImport.hs  FrontendConfig.hs  Import.hs  JsStringUtils.hs  Lib.hs  ReactWrapper.hs
frontend/src/Service/: Session.hs
shared/: shared.cabal
shared/src/: SharedImport.hs  SharedLib.hs
shared/src/Config/: Strings.hs
shared/src/Models/: Session.hs
