name:                backend-servant
version:             0.1.0.0
synopsis:            View together is a web app to watch shows on netflix et al with friends
description:         Please see README.md
homepage:            https://github.com/khanage/backend-servant#readme
license:             BSD3
license-file:        LICENSE
author:              Khan Thompson
maintainer:          khanage@gmail.com
copyright:           2016 Khan Thompson
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

flag library-only
  default: False
  description: used with yesod devel to skip exe compilation

library
  hs-source-dirs:      src
  exposed-modules:     EntryPoint
  other-modules:       ViewTogetherApp

                     , BaseImports
                     , Imports
                     , Config

                     , DbModels
                     , Models

                     , Claims

                     , Handlers

                     , User
                     , Session

  default-extensions:  OverloadedStrings
                     , DeriveFunctor
                     , ScopedTypeVariables
                     , GeneralizedNewtypeDeriving
                     , TypeFamilies
                     , NoImplicitPrelude
                     , RecordWildCards
                     , RankNTypes
                     , TemplateHaskell
                     , DeriveGeneric
                     , FlexibleContexts
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , mtl
                     , http-types
                     , servant
                     , servant-server
                     , servant-swagger
                     , swagger2
                     , text
                     , jose-jwt
                     , bytestring
                     , lens
                     , time
                     , wai
                     , warp
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , aeson
                     , monad-logger
                     , shared
                     , classy-prelude
                     , esqueleto
                     , resource-pool
                     , directory
  default-language:    Haskell2010

executable backend
  hs-source-dirs:      app
  main-is:             Main.hs
  if flag(library-only)
     buildable: False
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-extensions:  OverloadedStrings
                     , TemplateHaskell
                     , NoImplicitPrelude
  build-depends:       base
                     , backend-servant
                     , monad-logger
                     , classy-prelude
                     , fast-logger
  default-language:    Haskell2010

test-suite backend-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , backend-servant
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/khanage/backend-servant
