name:                frontend
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/frontend#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Lib
                     , Import
                     , Service.Session
                     , ExternalImport
                     , JsStringUtils
                     , ReactWrapper
                     , FrontendConfig
  default-extensions:  OverloadedStrings
                     , FlexibleContexts
                     , NoImplicitPrelude
                     , TupleSections
  build-depends:       base
                     , ghcjs-base
                     , ghcjs-dom
                     , classy-prelude
                     , classy-prelude-conduit
                     , text
                     , bytestring
                     , mtl
                     , transformers
                     , lens
                     , monad-logger
                     , shared
                     , ghcjs-jquery
                     , aeson
                     , data-default
                     , ghcjs-react
  default-language:    Haskell2010

executable frontend-output
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings
  build-depends:       base
                     , ghcjs-base
                     , frontend
                     , shared
                     , classy-prelude
  default-language:    Haskell2010

-- source-repository head
--   type:     git
--   location: https://github.com/githubuser/frontend
