name:                shared
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/shared#readme
license:             BSD3
license-file:        LICENSE
author:              Khan Thompson
maintainer:          khanage@gmail.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     SharedLib
                     , Config.Strings
                     , Models.Session
  other-modules:       SharedImport
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
  build-depends:       base >= 4.7 && < 5
                     , classy-prelude
                     , aeson
